--- a/src/componetns/users/Users.module.css
+++ b/src/componetns/users/Users.module.css
@@ -1,3 +1,6 @@
+.list {
+  padding-bottom: 30px;
+}
 .item {
   display: flex;
   gap: 1rem;
@@ -6,7 +9,7 @@
   border-radius: 5px;
 }
 .profile {
-  flex: 0 0 190px;
+  flex: 0 0 152px;
 }
 .item p {
   margin: 0;
@@ -19,7 +22,7 @@
 .profile img {
   width: 100%;
   object-fit: contain;
-  height: 190px;
+  height: 120px;
 }
 .item:not(:last-child) {
   margin-bottom: 1rem;
@@ -27,5 +30,35 @@
 
 .name {
   font-size: 25px;
-  margin-bottom: 50%;
+}
+
+.activePage {
+  font-weight: 700;
+  font-size: 18px;
+  z-index: 1;
+  position: relative;
+}
+.activePage::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: -1;
+  height: 30px;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  border-radius: 100%;
+  background: orange;
+}
+.paginatonPage {
+  margin-top: 1.5rem;
+  margin-right: 1rem;
+  text-align: right;
+  transition: all 0.3s ease 0s;
+}
+.paginatonPage span {
+  padding: 7px 13px;
+  cursor: pointer;
+}
+.paginatonPage span:hover {
 }
