add preloader for users page

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,10 @@ body {
   border: 1px solid #eee;
   background-color: #fff;
 }
+
+.preloader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
