--- a/src/componetns/header/Header.module.css
+++ b/src/componetns/header/Header.module.css
@@ -13,3 +13,21 @@
 .header img {
   height: 50px;
 }
+
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.profile img {
+  border-radius: 100%;
+  height: 30px;
+  width: 30px;
+}
+.profile p {
+  margin: 0;
+  font-size: 20px;
+}
+.profile:hover ~ .profile p {
+  color: red;
+}
