add status for profile

--- a/src/componetns/profile/aboutMe/profileInfo/ProfileInfo.module.css
+++ b/src/componetns/profile/aboutMe/profileInfo/ProfileInfo.module.css
@@ -1,5 +1,7 @@
-.description {
+.ProfileInfo {
   flex: 1 1 auto;
+}
+.description {
 }
 
 .item {
@@ -12,5 +14,5 @@
 .name {
   font-size: 25px;
   font-weight: 700;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
