--- a/src/componetns/login/Login.module.css
+++ b/src/componetns/login/Login.module.css
@@ -7,7 +7,6 @@ h1 {
   margin: 0 auto;
   max-width: 600px;
   padding: 1rem;
-  /* background: rgba(122, 191, 212, 0.041); */
 }
 .inputWrap:not(:last-child) {
   display: block;
@@ -32,7 +31,7 @@ h1 {
   font-size: 18px;
   width: 100%;
   border-radius: 10px;
-  border: 1px solid #eee;
+  border: 1px solid #ccc;
   padding: 0.5rem 1rem;
   cursor: pointer;
   transition: all 0.3s ease 0s;
