--- a/src/componetns/header/Header.module.css
+++ b/src/componetns/header/Header.module.css
@@ -13,6 +13,15 @@
 .header img {
   height: 50px;
 }
+.profileBody {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 10px;
+}
+.profileWrapper {
+  padding: 10px;
+}
 
 .profile {
   display: flex;
@@ -30,4 +39,10 @@
 }
 .profile:hover ~ .profile p {
   color: red;
+}
+.logout {
+  border: 1px solid #eee;
+  border-radius: 2px;
+  padding: 0.5rem 1.5rem;
+  font-size: 17px;
 }
