--- a/src/componetns/profile/aboutMe/AboutMe.module.css
+++ b/src/componetns/profile/aboutMe/AboutMe.module.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
 }
 .avatarChange {
   padding: 0.3rem;
@@ -20,5 +21,8 @@
 }
 
 .avatarChange:hover {
+  background: rgba(223, 217, 217, 0.274);
+}
+.avatarChange:disabled {
   background: rgba(223, 217, 217, 0.274);
 }
