--- a/src/componetns/profile/myPosts/MyPost.module.css
+++ b/src/componetns/profile/myPosts/MyPost.module.css
@@ -1,7 +1,11 @@
+.blog {
+  margin-top: 50px;
+  border-top: 1px dashed #ddd;
+}
+
 .form {
   margin-top: 50px;
   padding-bottom: 10px;
-  border-bottom: 1px dashed #ddd;
 }
 .textarea {
   outline: 0;
