--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,10 @@ img {
 }
 body {
   background-color: rgba(0, 255, 255, 0.062);
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #330033;
+  background-color: #996666;
+  background-color: #0099ff;
+  font-family: 'Gill Sans', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .wrapper {
   display: grid;
@@ -31,19 +34,19 @@ body {
   margin: 0 auto;
   min-height: 100vh;
 
-  grid-template-columns: minmax(200px, max-content) 1fr;
+  grid-template-columns: minmax(250px, max-content) 1fr;
   grid-template-rows: max-content 1fr;
   grid-gap: 10px;
   grid-template-areas:
-    "header header"
-    "aside main";
+    'header header'
+    'aside main';
 }
 .content {
   border-radius: 15px 15px 0 0;
   overflow: hidden;
   grid-area: main;
   border: 1px solid #eee;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   position: relative;
 }
 
