--- a/src/componetns/common/preloader/Preloader.module.css
+++ b/src/componetns/common/preloader/Preloader.module.css
@@ -11,7 +11,7 @@
 }
 
 .loaderWrap {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -33,7 +33,7 @@
 }
 .loader:before,
 .loader:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
 }
@@ -64,4 +64,11 @@
   40% {
     box-shadow: 0 2.5em 0 0;
   }
+}
+
+.start {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
