--- a/src/componetns/profile/aboutMe/profileInfo/ProfileStatus.module.css
+++ b/src/componetns/profile/aboutMe/profileInfo/ProfileStatus.module.css
@@ -14,6 +14,12 @@
   opacity: 1;
   visibility: visible;
 }
+
+.status:hover {
+  border-radius: 5px;
+  animation: field-puls 0.9s infinite ease-out;
+}
+
 .editStatus {
   position: absolute;
   top: 3px;
@@ -68,5 +74,19 @@
   }
   40% {
     transform: scale(1) skew(0);
+  }
+}
+@keyframes field-puls {
+  10% {
+    box-shadow: 1px 1px 10px #eee;
+  }
+  20% {
+    box-shadow: 0;
+  }
+  30% {
+    box-shadow: 1px 1px 10px #eee;
+  }
+  40% {
+    box-shadow: 0;
   }
 }
