--- a/src/componetns/profile/aboutMe/AboutMe.module.css
+++ b/src/componetns/profile/aboutMe/AboutMe.module.css
@@ -4,6 +4,8 @@
   column-gap: 50px;
 }
 .avatar {
+  position: relative;
+  z-index: 2;
   overflow: hidden;
   height: 270px;
   cursor: pointer;
@@ -11,6 +13,7 @@
 }
 
 .profilePhoto {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -44,7 +47,7 @@
 }
 
 .avatarChange:hover {
-  background: rgba(223, 217, 217, 0.274);
+  /* background: rgba(223, 217, 217, 0.274); */
 }
 .avatarChange:disabled {
   background: rgba(223, 217, 217, 0.274);
@@ -56,4 +59,10 @@
   display: block;
   opacity: 1;
   visibility: visible;
+}
+.avatar:hover ~ .avatarChange {
+  transform: translate(0, -47px);
+  background: black;
+  border: none;
+  color: none;
 }
