--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,8 @@ body {
   grid-gap: 10px;
   grid-template-areas:
     'header header'
-    'aside main';
+    'aside main'
+    'footer footer';
 }
 .content {
   border-radius: 15px 15px 0 0;
