--- a/src/componetns/messages/Messages.module.css
+++ b/src/componetns/messages/Messages.module.css
@@ -55,6 +55,17 @@
   overflow-y: auto;
   flex: 1 1 auto;
 }
+.list::-webkit-scrollbar {
+  width: 10px;
+}
+.list::-webkit-scrollbar-track {
+  background-color: white;
+}
+.list::-webkit-scrollbar-thumb {
+  background: #72b7e9;
+  border-radius: 5px;
+}
+
 .list .item {
   flex: 1 1 auto;
 }
@@ -63,6 +74,8 @@
   display: flex;
 }
 .input {
+  resize: none;
+  height: 20px;
   outline: 0;
   width: 100%;
   background: inherit;
@@ -71,6 +84,7 @@
   border-right: none;
   padding: 0.5rem 1rem;
   transition: all 0.1s ease 0s;
+  height: 33px !important;
 }
 .inout:focus {
   border: 1px solid rgb(172, 171, 171);
