--- a/src/pages/Dialogs/Messages.module.css
+++ b/src/pages/Dialogs/Messages.module.css
@@ -9,12 +9,25 @@
   flex-direction: column;
   justify-content: space-between;
   margin-bottom: 10px;
+  flex-basis: 100%;
+  overflow-y: auto;
 }
 .dialogs {
   background: rgba(221, 221, 221, 0.562);
   flex: 0 0 230px;
+  height: 100%;
+  overflow-y: auto;
 }
-
+.dialogs::-webkit-scrollbar {
+  width: 4px;
+}
+.dialogs::-webkit-scrollbar-track {
+  background-color: white;
+}
+.dialogs::-webkit-scrollbar-thumb {
+  background: #72b7e9;
+  border-radius: 5px;
+}
 .user {
   padding: 0.7rem 1rem;
   cursor: pointer;
@@ -31,8 +44,26 @@
   height: 40px;
   width: 40px;
   border-radius: 100%;
-  overflow: hidden;
   flex: 0 0 40px;
+  position: relative;
+}
+.avatar img {
+  border-radius: 100%;
+}
+.avatar span {
+  height: 15px;
+  width: 15px;
+  border-radius: 100%;
+  background: rgb(120, 120, 226);
+  color: black;
+  font-size: 12px;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -5px;
+  right: 0;
 }
 
 .last__message {
@@ -51,7 +82,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  height: 78vh;
   overflow-y: auto;
   flex: 1 1 auto;
 }
@@ -70,7 +101,7 @@
   flex: 1 1 auto;
 }
 .form {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   display: flex;
 }
 .input {
@@ -88,6 +119,14 @@
 }
 .input:focus {
   border: 1px solid rgb(172, 171, 171);
+}
+
+.body {
+  display: flex;
+  padding: 0.4rem 1rem;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
 }
 .button {
   background: inherit;
@@ -119,8 +158,10 @@
   margin-left: 50px;
   border-radius: 20px 20px 0 20px;
 }
+
 .dialogs .active {
   background: rgba(255, 255, 255, 1);
+  cursor: default;
 }
 
 .noMessage {
@@ -129,4 +170,12 @@
   justify-content: center;
   height: 100%;
   display: flex;
+}
+
+.chatEmpty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 100%;
+  font-size: 20px;
 }
